2007-07-29  Eitan Isaacson  <eitan@ascender.com>

	* README: 
	* configure.in: 
	* debian/changelog: Version bumped to version 0.1.90.

	* NEWS: Updated for version 0.1.6.

2007-07-20  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/__init__.py: Block SIGSTP so we don't hang
	the desktop, thank you Simos Xenitellis (bug 457965).

2007-07-08  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Marked 'C' string as untranslatable.
	* src/lib/accerciser/accessible_treeview.py: Added some safety harnesses.
	* src/lib/accerciser/plugin/view.py: Fixed new view dialog.
	
2007-07-08  Eitan Isaacson  <eitan@ascender.com>

	* README: Bumped to 0.1.6.
	* configure.in: Bumped to 0.1.6.
	* debian/changelog: Bumped to 0.1.6.
	* src/lib/accerciser/bookmarks.py: Fixed bookmark deletion. Fixed
	application bookmarks.
	* src/lib/accerciser/accessible_treeview.py: Fixed indirect
	selection of top level nodes.

2007-07-08  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: Updated to 0.1.5.
	
	* src/lib/accerciser/plugin/base_plugin.py: Added focus 
	callback that scrolls to the focused child widget in a
	viewport plugin.
	* plugins/interface_view.py: Removed focus callback for scrolling.
	It is now in a superclass.

2007-07-05  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Handle exception from a non-existant
	selection interface.
	* src/lib/accerciser/main_window.py: Fixed exception raised in bug 
	453330.

2007-07-01  Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py: Catch AttributeError on slots.
	* src/lib/accerciser/pyatspi.zip: Updated to revisio 935.

2007-07-01  Eitan Isaacson  <eitan@ascender.com>

	* accerciser.schemas.in: Changed caps on view names.
	* help/C/accerciser.xml: Updated documentation.
	* help/C/figures/accerciser.png: Updated screenshot.
	* help/C/figures/api_browser.png: Updated screenshot.
	* help/C/figures/event_monitor.png: Updated screenshot.