@@ -7,6 +7,7 @@ plugins/event_monitor.glade
 plugins/event_monitor.py
 plugins/interface_view.glade
 plugins/interface_view.py
+plugins/quick_select.py
 plugins/script_recorder.glade
 plugins/script_recorder.py
 src/lib/accerciser/accerciser.py
@@ -20,3 +21,8 @@ src/lib/accerciser/plugin/base_plugin.py
 src/lib/accerciser/plugin/message.py
 src/lib/accerciser/plugin/plugin_manager.py
 src/lib/accerciser/plugin/view.py
+src/lib/accerciser/ui_manager.py
+
+# files added by intltool-prepare
+accerciser.desktop.in
+debian/accerciser/usr/share/applications/accerciser.desktop.in
