@@ -1,2 +1,6 @@
 accerciser.desktop.in
+macaroon/macaroon.desktop.in.in
+macaroon/macaroon/playback/keypress_mimic.py
+macaroon/macaroon/record/about.py
+macaroon/macaroon/record/main.py
 
