@@ -1,3 +1,9 @@
+2007-07-30  Eitan Isaacson  <eitan@ascender.com>
+
+	* po/POTFILES.in: 
+	* po/POTFILES.skip: Added and skipped relevant files. 
+	Thanks Claude Paroz.
+
 2007-07-29  Eitan Isaacson  <eitan@ascender.com>
 
 	* README: 
